--- a/service-api/src/main/resources/application.yml
+++ b/service-api/src/main/resources/application.yml
@@ -2,11 +2,11 @@ server:
   port: 8761
 
 eureka:
-  server:
+  # server:
     # 自我保护机制，没检测到心跳会把服务关掉，这边先粗暴把这个机制关掉
     # enableSelfPreservation: false
     # 心跳比例，收到75%的心跳就是正常的
-    renewalPercentThreshold: 0.75
+    # renewalPercentThreshold: 0.75
   instance:
     hostname: localhost
   client:
